objects/Group_Logistics_Repeatable__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Group_Logistics_ID__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_IT_Coding_To_Map_Members_To_Group__c</fullName>
        <label>Anthem IT Coding To Map Members To Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Anthem_Group_Values_Passed_On_File__c</fullName>
        <label>Are Anthem Group Values Passed On File</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Group_Logistics_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracting_State__c</fullName>
        <formula>Group_Logistics_ID__r.Contracting_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracting State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_IT_Reporting_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom IT Reporting Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_File_Originally_Implemented__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date File Originally Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeDupper_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DeDupper Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeDupper__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DeDupper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Client_Pass_SSN_On_Eligibility_File__c</fullName>
        <label>Does Client Pass SSN On Eligibility File</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Use_Department_Number__c</fullName>
        <label>Does Client Use Department Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Group_Logistics_ID__r.Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_File_1_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility File #1 Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_File_2_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility File #2 Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_1_Discrepancy_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File #1 Discrepancy Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_2_Discrepancy_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File #2 Discrepancy Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Delivery_Day_Of_Week__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Delivery Day Of Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Format__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Frequency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Transmission__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Transmission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Complexity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Complexity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Logistics_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Logistics ID</label>
        <referenceTo>Group_Logistics__c</referenceTo>
        <relationshipLabel>Group Logistics Repeatable</relationshipLabel>
        <relationshipName>Group_Logistics_Repeatable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Number</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Group Logistics Repeatable</relationshipLabel>
        <relationshipName>Group_Logistics_Repeatable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Services_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Services Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoming_Feed_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incoming Feed Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_File_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Input File Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Custom_IT_Reporting_Created__c</fullName>
        <label>Is Custom IT Reporting Created</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Department_Number_Mandatory__c</fullName>
        <label>Is Department Number Mandatory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPPE_BYPASS_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPPE BYPASS (WGS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPPE_Dataset_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPPE Dataset (NASCO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Group_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Group Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_File_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Output File Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee__c</fullName>
        <formula>Group_Logistics_ID__r.Performance_Guarantee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Guarantee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Exchange_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Exchange Account</label>
        <referenceTo>Alpha_Prefix_Request__c</referenceTo>
        <relationshipLabel>Group Logistics Repeatable</relationshipLabel>
        <relationshipName>Group_Logistics_Repeatable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Group Logistics Repeatable</relationshipLabel>
        <relationshipName>Group_Logistics_Repeatable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTXSUM_Dataset_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RTXSUM Dataset (NASCO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTXSUM_ERRRPT_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RTXSUM ERRRPT (WGS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTXSUM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RTXSUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Day__c</fullName>
        <formula>Group_Logistics_ID__r.Renewal_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>Group_Logistics_ID__r.Renewal_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scrubber_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scrubber Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scrubber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scrubber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Audit_ACTREPT_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Audit ACTREPT (WGS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Audit_Dataset_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Audit Dataset (NASCO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Audit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitterID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SubmitterID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXN_Generator_CTLREPT_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TXN Generator CTLREPT (WGS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXN_Generator_Dataset_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TXN Generator Dataset (NASCO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXN_Generator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TXN Generator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tape_CLERK_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tape CLERK ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X834_Trigger_File_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>834 Trigger File Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Group Logistics Repeatable</label>
    <nameField>
        <displayFormat>GLREPEAT-{0000}</displayFormat>
        <label>Group Logistics Repeatable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Logistics Repeatable</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>